--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <h1>Among Us Zombies: Kill Zombies to Advance to the Next Round</h1>
-    <h2>
-      Controls:
-    </h2>
+    <h1>Zombies Among Us</h1>
+    <h2>Instructions: Kill Zombies to Advance to the Next Round!</h2>
+    <h3>Controls:</h3>
     <p>
       MOVING: W,A,S,D Keys || SCARECROW (once per round): Spacebar || SHOOTING:
       Arrow Keys
