--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <h1>Zombies Among Us</h1>
-    <h2>Instructions: Kill Zombies to Advance to the Next Round!</h2>
-    <h3>Controls:</h3>
+    <h2>Kill Zombies to Advance to the Next Round!</h2>
     <p>
       MOVING: W,A,S,D Keys || SCARECROW (once per round): Spacebar || SHOOTING:
       Arrow Keys
